// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`WhoToFollowPageSidebar - Snapshots > matches snapshot for LeftDrawer 1`] = `
<div>
  <div
    class="flex flex-col gap-6"
    data-testid="container"
  >
    <div
      data-testid="filter-sort-who-to-follow"
    >
      Sort Filter
    </div>
  </div>
</div>
`;

exports[`WhoToFollowPageSidebar - Snapshots > matches snapshot for LeftSidebar 1`] = `
<div>
  <div
    data-testid="filter-sort-who-to-follow"
  >
    Sort Filter
  </div>
</div>
`;

exports[`WhoToFollowPageSidebar - Snapshots > matches snapshot for RightDrawer 1`] = `
<div>
  <div
    class="flex flex-col gap-6"
    data-testid="container"
  >
    <div
      data-testid="active-users"
    >
      Active Users
    </div>
    <div
      data-testid="feedback-card"
    >
      Feedback Card
    </div>
  </div>
</div>
`;

exports[`WhoToFollowPageSidebar - Snapshots > matches snapshot for RightSidebar 1`] = `
<div>
  <div
    data-testid="active-users"
  >
    Active Users
  </div>
  <div
    class="sticky top-[100px] self-start"
    data-testid="container"
  >
    <div
      data-testid="feedback-card"
    >
      Feedback Card
    </div>
  </div>
</div>
`;
